--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "anthonydu.com-vite",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.0", 
+  "homepage": "https://www.anthonydu.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
